--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/clinic
+spring.datasource.username=postgresuser
+spring.datasource.password=postgrespassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL95Dialect
